fix spacing betwee sponsors lines

--- a/pycon_portugal_2022/static/sass/_home.scss
+++ b/pycon_portugal_2022/static/sass/_home.scss
@@ -244,8 +244,11 @@
             padding-top: .875rem;
 
             p {
-              //padding-left: 1rem;
+              margin-bottom: 1rem;
             }
+          }
+          p {
+            margin-bottom: 0rem;
           }
         }
       }
